#[package]
#name = "kyopro_lib"
#version = "0.1.0"
#authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "klalgebra",
    "klfewnick_tree",
    "klgrid",
    "klhld",
    "klinftype",
    "klinputmarker",
    "kliterator",
    "klkitamasa",
    "klmacro",
    "klmath",
    "klmisc",
    "klmodint",
    "klrle",
    "klsegtree",
    "klsieve",
    "klstdfeature",
    "klstring",
    "klunionfind",
    "tests/equip_test",
]
