[package]
name = "klsegtree"
version = "0.1.0"
authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klalgebra = { path = "../klalgebra" }
num = "=0.2.1"
num-traits = "=0.2.11"
itertools = "=0.9.0"

[dev-dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
criterion = "=0.3.3"

[[bench]]
name = "segtree"
harness = false
