[package]
name = "klstdfeature"
version = "0.1.0"
authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }

[dev-dependencies]
criterion = "=0.3.3"
itertools = "=0.9.0"

[[bench]]
name = "myslice"
harness = false
