[package]
name = "klstdfeature"
version = "0.1.0"
authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.8.5", features = ["small_rng"] }

[dev-dependencies]
criterion = "=0.3.6"
itertools = "=0.14.0"

[[bench]]
name = "myslice"
harness = false
