[package]
name = "equip_test"
version = "0.1.0"
authors = ["tyu-ru <tyuru.tw.cpp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
klalgebra = { path = "../../klalgebra/" }
klfewnick_tree = { path = "../../klfewnick_tree/" }
klgrid = { path = "../../klgrid/" }
kliterator = { path = "../../kliterator/" }
klkitamasa = { path = "../../klkitamasa/" }
klmacro = { path = "../../klmacro" }
klmath = { path = "../../klmath/" }
klmisc = { path = "../../klmisc/" }
klmodint = { path = "../../klmodint/" }
klrle = { path = "../../klrle/" }
klsegtree = { path = "../../klsegtree/" }
klsieve = { path = "../../klsieve/" }
klstdfeature = { path = "../../klstdfeature/" }
klstring = { path = "../../klstring/" }
klunionfind = { path = "../../klunionfind/" }
num = "=0.2.1"
itertools = "=0.9.0"
num-derive = "=0.3.0"
